--- a/starwarsAPI/package.json
+++ b/starwarsAPI/package.json
@@ -17,5 +17,8 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "vite": "^4.2.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.js"
   }
 }
