--- a/starwarsAPI/package.json
+++ b/starwarsAPI/package.json
@@ -16,9 +16,12 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "8.36.0",
+    "eslint-plugin-react": "^7.32.2",
+    "standard": "17.0.0",
     "vite": "^4.2.0"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.js"
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
